# rcs

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/rcs/: cli.py  request_handler.py  server.py
src/rcs/server/: __init__.py  config.py  server.py
tests/rcs/: test_server.py
